crates/puffin-package/src/snapshots/puffin_package__requirements_txt__test__parse-include-a.txt.snap
---
source: crates/puffin-package/src/requirements_txt.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "tomli",
                ),
                extras: None,
                version_or_url: None,
                marker: None,
            },
            hashes: [],
            editable: false,
        },
        RequirementEntry {
            requirement: Requirement {
                name: PackageName(
                    "numpy",
                ),
                extras: None,
                version_or_url: Some(
                    VersionSpecifier(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            1,
                                            24,
                                            2,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                ),
                marker: None,
            },
            hashes: [],
            editable: false,
        },
    ],
    constraints: [],
}
