crates/puffin-package/src/snapshots/puffin_package__requirements_txt__test__parse-include-b.txt.snap
---
source: crates/puffin-package/src/requirements_txt.rs
expression: actual
---
RequirementsTxt {
    requirements: [
        RequirementEntry {
            requirement: Requirement {
                name: "tomli",
                extras: None,
                version_or_url: None,
                marker: None,
            },
            hashes: [],
            editable: false,
        },
    ],
    constraints: [],
}
